deployment/awx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awx-ingress
  namespace: awx
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  rules:
  - host: awx.ocd.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: awx-github-service
            port:
              name: http
  tls:
  - hosts:
    - awx.ocd.lan
    secretName: awx-github-secret
